<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">


    <androidx.fragment.app.FragmentContainerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="utils.fragments.HeaderFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation_header"
        tools:ignore="MissingConstraints" >
    </androidx.fragment.app.FragmentContainerView>


    <Button
        android:id="@+id/changeName"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/fragment_header"
        app:layout_constraintTop_toBottomOf="@id/fragment_header"
        android:textAlignment="center"
        android:text="@string/cambiar_nombre">
    </Button>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20dp"
        android:hint="@string/nombre"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/changeName"
        app:layout_constraintTop_toBottomOf="@id/changeName"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <Button
        android:id="@+id/changeUsername"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/changeName"
        app:layout_constraintTop_toBottomOf="@id/changeName"
        android:textAlignment="center"
        android:text="@string/cambiar_usuario">
    </Button>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20dp"
        android:visibility="invisible"
        android:hint="@string/usuario"
        app:layout_constraintStart_toStartOf="@+id/changeUsername"
        app:layout_constraintTop_toBottomOf="@id/changeUsername"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <Button
        android:id="@+id/changeEmail"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/changeUsername"
        app:layout_constraintTop_toBottomOf="@id/changeUsername"
        android:textAlignment="center"
        android:text="@string/cambiar_email">
    </Button>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:visibility="invisible"
        android:textSize="20dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="@+id/changeUsername"
        app:layout_constraintTop_toBottomOf="@id/changeEmail"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <Button
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/changeEmail"
        app:layout_constraintTop_toBottomOf="@id/changeEmail"
        android:textAlignment="center"
        android:text="@string/cambiar_contrasenia">
    </Button>

    <EditText
        android:id="@+id/contraseniaActualInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20dp"
        android:visibility="invisible"
        android:hint="@string/ingrese_su_contrase_a_actual"
        app:layout_constraintStart_toStartOf="@+id/changePassword"
        app:layout_constraintTop_toBottomOf="@id/changePassword"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <EditText
        android:id="@+id/contraseniaNuevoInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:visibility="invisible"
        android:textSize="20dp"
        android:hint="@string/ingrese_su_nueva_contrase_a"
        app:layout_constraintStart_toStartOf="@+id/contraseniaActualInput"
        app:layout_constraintTop_toBottomOf="@id/contraseniaActualInput"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>


    <Button
        android:id="@+id/guardarCambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/guardar_cambios">
    </Button>

    <Button
        android:id="@+id/cancelarCambios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:text="@string/cancelar_cambios">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>

