<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blackFondo">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/userImage"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        android:layout_marginLeft="15dp"
        android:textAlignment="textStart"
        android:layout_marginTop="28dp"
        android:text="@string/namedata"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        android:layout_marginLeft="15dp"
        android:textAlignment="textStart"
        android:layout_marginTop="28dp"
        android:text="@string/nombre"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/userUsername"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@id/userNameText"
        android:text="@string/usernameData"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/userUsernameText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@+id/userNameText"
        app:layout_constraintTop_toBottomOf="@+id/userNameText"
        android:text="@string/usuario"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAlignment="textStart"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/userUsername"
        app:layout_constraintTop_toBottomOf="@id/userUsername"
        android:text="@string/emailData"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/userEmailText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAlignment="textStart"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/userUsernameText"
        app:layout_constraintTop_toBottomOf="@id/userUsernameText"
        android:text="@string/email"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/editDataButton"
        android:layout_width="wrap_content"
        android:textAlignment="textStart"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        android:text="@string/editar_mis_datos"
        android:textColor="@color/grey">
    </TextView>

    <ImageView
        android:id="@+id/startOne"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/editDataButton"
        app:layout_constraintTop_toBottomOf="@id/editDataButton"
        android:src="@drawable/star">
    </ImageView>

    <ImageView
        android:id="@+id/startTwo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/startOne"
        app:layout_constraintTop_toBottomOf="@id/editDataButton"
        android:src="@drawable/star">
    </ImageView>
    <ImageView
        android:id="@+id/startThree"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/startTwo"
        app:layout_constraintTop_toBottomOf="@id/editDataButton"
        android:src="@drawable/star">
    </ImageView>
    <ImageView
        android:id="@+id/startFour"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/startThree"
        app:layout_constraintTop_toBottomOf="@id/editDataButton"
        android:src="@drawable/star">
    </ImageView>
    <ImageView
        android:id="@+id/startFive"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/startFour"
        app:layout_constraintTop_toBottomOf="@id/editDataButton"
        android:src="@drawable/star">
    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>