<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blackFondo">

    <ImageView
        android:id="@+id/imagenLogin"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:src="@drawable/tech_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textoLoginEmail"
        android:layout_width="20mm"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/imagenLogin"
        app:layout_constraintTop_toBottomOf="@id/imagenLogin"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/white">
    </TextView>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/textoLoginEmail"
        app:layout_constraintTop_toBottomOf="@id/textoLoginEmail"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>


    <TextView
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        android:layout_marginLeft="15dp"
        android:text="@string/usuario"
        android:textColor="@color/white">
    </TextView>

    <EditText
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/userText"
        app:layout_constraintTop_toBottomOf="@id/userText"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/userInput"
        app:layout_constraintTop_toBottomOf="@id/userInput"
        android:layout_marginLeft="15dp"
        android:text="@string/Nombre"
        android:textColor="@color/white">
    </TextView>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        android:text="@string/contrasenia"
        android:textColor="@color/white">
    </TextView>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:textColor="@color/white">
    </EditText>

    <Button
        android:id="@+id/textoCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/cancelar">
    </Button>

    <Button
        android:id="@+id/textoCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="15dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/registrarme">
    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>