<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blackFondo">

    <androidx.fragment.app.FragmentContainerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="utils.fragments.HeaderFragment"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation_header"
        tools:ignore="MissingConstraints" >
    </androidx.fragment.app.FragmentContainerView>

    <ImageView
        android:id="@+id/locationImage"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:src="@drawable/ubicacionmap"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/fragment_header"
        app:layout_constraintTop_toBottomOf="@id/fragment_header"/>

    <TextView
        android:id="@+id/explicacionEnvio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/locationImage"
        app:layout_constraintTop_toBottomOf="@id/locationImage"
        android:layout_marginLeft="15dp"
        android:textAlignment="textStart"
        android:layout_marginTop="28dp"
        android:text="@string/explicacion_compra"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/interrogacionEnvio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/explicacionEnvio"
        app:layout_constraintTop_toBottomOf="@id/explicacionEnvio"
        android:layout_marginLeft="15dp"
        android:textAlignment="textStart"
        android:layout_marginTop="28dp"
        android:text="@string/interrogacion_compra"
        android:textColor="@color/white">
    </TextView>

    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/aceptar">
    </Button>

    <Button
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="30dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/cancelar">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>