<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_component"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageHome"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingRight="270dp"
            android:src="@drawable/casa"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/imageProfile"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            />


        <TextView
            android:id="@+id/line0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/imageHome"
            app:layout_constraintTop_toBottomOf="@id/imageHome"
            android:background="@color/grey">
        </TextView>

        <TextView
            android:id="@+id/configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/line0"
            app:layout_constraintTop_toBottomOf="@id/line0"
            android:text="@string/configuraci_n"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/configuration"
            app:layout_constraintTop_toBottomOf="@id/configuration"
            android:background="@color/grey">
        </TextView>

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/line1"
            app:layout_constraintTop_toBottomOf="@id/line1"
            android:text="@string/perfil"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/profile"
            app:layout_constraintTop_toBottomOf="@id/profile"
            android:background="@color/grey">
        </TextView>

        <TextView
            android:id="@+id/shoppingHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@id/line2"
            android:text="@string/historial_de_compras"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/shoppingHistory"
            app:layout_constraintTop_toBottomOf="@id/shoppingHistory"
            android:background="@color/grey">
        </TextView>

        <TextView
            android:id="@+id/voteApplicationn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toStartOf="@+id/line3"
            app:layout_constraintTop_toBottomOf="@id/line3"
            android:text="@string/votar_aplicaci_n"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/voteApplicationn"
            app:layout_constraintTop_toBottomOf="@id/voteApplicationn"
            android:background="@color/grey">
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/volver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="300dp"
        android:background="@color/blackFondo">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>